--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@tailwindcss/typography": "^0.5.19",
     "clsx": "^2.1.0",
     "framer-motion": "^11.18.2",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.14.2",
     "howler": "^2.2.4",
     "lucide-react": "^0.378.0",
@@ -24,6 +27,7 @@
     "pixi.js": "7.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^2.2.0",
     "three": "^0.182.0"
   },
